--- a/Simulator Interface/Simulator Interface.csproj
+++ b/Simulator Interface/Simulator Interface.csproj
@@ -58,6 +58,14 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SimulatorPropertiesPopupForm.cs">
+      <SubType>Form</SubType>
+      <ExcludeFromStyleCop>True</ExcludeFromStyleCop>
+    </Compile>
+    <Compile Include="SimulatorPropertiesPopupForm.Designer.cs">
+      <DependentUpon>SimulatorPropertiesPopupForm.cs</DependentUpon>
+      <ExcludeFromStyleCop>True</ExcludeFromStyleCop>
+    </Compile>
     <Compile Include="VectorEditor.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -81,6 +89,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="SimulatorPropertiesPopupForm.resx">
+      <DependentUpon>SimulatorPropertiesPopupForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="VectorEditor.resx">
       <DependentUpon>VectorEditor.cs</DependentUpon>
     </EmbeddedResource>
