Start unit tests for the VectoLogic class.

--- a/SimulatorLogic.Tests/SimulatorLogic.Tests.csproj
+++ b/SimulatorLogic.Tests/SimulatorLogic.Tests.csproj
@@ -60,6 +60,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SimulatorLogic\SimulatorLogic.csproj">
+      <Project>{803ed676-d262-4f63-a039-1063f54e9cea}</Project>
+      <Name>SimulatorLogic</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
