Add CelestialBody class

--- a/SimulatorLogic/SimulatorLogic.csproj
+++ b/SimulatorLogic/SimulatorLogic.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Logic\VectorLogic.cs" />
+    <Compile Include="Models\CelestialBody.cs" />
     <Compile Include="Models\Vector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
