--- a/SimulatorLogic/SimulatorLogic.csproj
+++ b/SimulatorLogic/SimulatorLogic.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Logic\CelestialBodyLogic.cs" />
     <Compile Include="Logic\VectorLogic.cs" />
     <Compile Include="Models\CelestialBody.cs" />
     <Compile Include="Models\Vector.cs" />
